--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <img src="about_iot.jpg "  height="300" width="500">
 
 <ul>
-	<li><a href="main.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="history.html">History of IOT</a></li>
 	<li><a href="how.html">How it Works</a></li>
 	<li><a href="why.html">Why IOT important</a></li>
