--- a/history.html
+++ b/history.html
@@ -15,7 +15,7 @@
 
 
 <ul>
-	<li><a href="main.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html"> About IOT</a></li>
 	<li><a href="how.html">How it Works</a></li>
 	<li><a href="why.html">Why IOT important</a></li>
