--- a/how.html
+++ b/how.html
@@ -14,7 +14,7 @@
 <img src="how.png " >
 
 <ul>
-	<li><a href="main.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html"> About IOT</a></li>
 	<li><a href="history.html">History of IOT</a></li>
 	<li><a href="why.html">Why IOT important</a></li>
