--- a/sec.html
+++ b/sec.html
@@ -20,7 +20,7 @@
 <img src="sec.jpg " >
 
 <ul>
-	<li><a href="main.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html"> About IOT</a></li>
 	<li><a href="history.html">History of IOT</a></li>
 	<li><a href="how.html">How it Works</a></li>
