--- a/why.html
+++ b/why.html
@@ -14,7 +14,7 @@
 <img src="why_iot.png"  height="300" width="500">
 
 <ul>
-	<li><a href="main.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html"> About IOT</a></li>
 	<li><a href="history.html">History of IOT</a></li>
 	<li><a href="how.html">How it Works</a></li>
